fix script and fix paxos

--- a/bin/config.json
+++ b/bin/config.json
@@ -29,14 +29,14 @@
     "multiversion": false,
     "use_retro_log": false,
     "benchmark": {
-        "T": 2,
+        "T": 10,
         "N": 0,
         "K": 1000,
         "W": 0.5,
-        "Throttle": 3000,
+        "Throttle": 100,
         "Concurrency": 1,
-        "Distribution": "conflict",
-        "LinearizabilityCheck": true,
+        "Distribution": "uniform",
+        "LinearizabilityCheck": false,
         "Conflicts": 0,
         "Min": 0,
         "Mu": 500,
