fix create config

--- a/bin/config.json
+++ b/bin/config.json
@@ -1,13 +1,25 @@
 {
     "address": {
-        "1.1": "tcp://172.24.212.230:1735",
-        "1.2": "tcp://172.24.212.231:1736",
-        "1.3": "tcp://172.24.212.232:1737"
+        "1.1": "tcp://172.19.80.244:1735",
+        "1.2": "tcp://172.19.80.245:1735",
+        "1.3": "tcp://172.19.80.246:1735",
+        "1.4": "tcp://172.19.80.247:1735",
+        "1.5": "tcp://172.19.80.248:1735",
+        "1.6": "tcp://172.19.80.249:1735",
+        "1.7": "tcp://172.19.80.250:1735",
+        "1.8": "tcp://172.19.80.251:1735",
+        "1.9": "tcp://172.19.80.252:1735"
     },
     "http_address": {
-        "1.1": "http://172.24.212.230:8080",
-        "1.2": "http://172.24.212.231:8081",
-        "1.3": "http://172.24.212.232:8082"
+        "1.1": "http://172.19.80.244:8081",
+        "1.2": "http://172.19.80.245:8081",
+        "1.3": "http://172.19.80.246:8081",
+        "1.4": "http://172.19.80.247:8081",
+        "1.5": "http://172.19.80.248:8081",
+        "1.6": "http://172.19.80.249:8081",
+        "1.7": "http://172.19.80.250:8081",
+        "1.8": "http://172.19.80.251:8081",
+        "1.9": "http://172.19.80.252:8081"
     },
     "policy": "majority",
     "threshold": 3,
@@ -17,13 +29,13 @@
     "multiversion": false,
     "use_retro_log": false,
     "benchmark": {
-        "T": 10,
+        "T": 60,
         "N": 0,
         "K": 1000,
         "W": 0.5,
-        "Throttle": 100,
+        "Throttle": 0,
         "Concurrency": 1,
-        "Distribution": "uniform",
+        "Distribution": "conflict",
         "LinearizabilityCheck": false,
         "Conflicts": 0,
         "Min": 0,
