--- a/bin/config.json
+++ b/bin/config.json
@@ -2,12 +2,24 @@
     "address": {
         "1.1": "tcp://172.16.242.11:1735",
         "1.2": "tcp://172.16.242.12:1735",
-        "1.3": "tcp://172.16.242.13:1735"
+        "1.3": "tcp://172.16.242.13:1735",
+        "1.4": "tcp://172.16.242.14:1735",
+        "1.5": "tcp://172.16.242.15:1735",
+        "1.6": "tcp://172.16.242.16:1735",
+        "1.7": "tcp://172.16.242.17:1735",
+        "1.8": "tcp://172.16.242.8:1735",
+        "1.9": "tcp://172.16.242.9:1735"
     },
     "http_address": {
         "1.1": "http://172.16.242.11:8081",
         "1.2": "http://172.16.242.12:8081",
-        "1.3": "http://172.16.242.13:8081"
+        "1.3": "http://172.16.242.13:8081",
+        "1.4": "http://172.16.242.14:8081",
+        "1.5": "http://172.16.242.15:8081",
+        "1.6": "http://172.16.242.16:8081",
+        "1.7": "http://172.16.242.17:8081",
+        "1.8": "http://172.16.242.8:8081",
+        "1.9": "http://172.16.242.9:8081"
     },
     "policy": "majority",
     "threshold": 3,
