fix create config

--- a/bin/config.json
+++ b/bin/config.json
@@ -1,13 +1,57 @@
 {
     "address": {
         "1.1": "tcp://172.16.242.11:1735",
+        "1.10": "tcp://172.16.242.20:1735",
+        "1.11": "tcp://172.16.242.21:1735",
+        "1.12": "tcp://172.16.242.22:1735",
+        "1.13": "tcp://172.16.242.23:1735",
+        "1.14": "tcp://172.16.242.24:1735",
+        "1.15": "tcp://172.16.242.25:1735",
+        "1.16": "tcp://172.16.242.26:1735",
+        "1.17": "tcp://172.16.242.27:1735",
+        "1.18": "tcp://172.16.242.28:1735",
+        "1.19": "tcp://172.16.242.29:1735",
         "1.2": "tcp://172.16.242.12:1735",
-        "1.3": "tcp://172.16.242.13:1735"
+        "1.20": "tcp://172.16.242.30:1735",
+        "1.21": "tcp://172.16.242.31:1735",
+        "1.22": "tcp://172.16.242.32:1735",
+        "1.23": "tcp://172.16.242.33:1735",
+        "1.24": "tcp://172.16.242.8:1735",
+        "1.25": "tcp://172.16.242.9:1735",
+        "1.3": "tcp://172.16.242.13:1735",
+        "1.4": "tcp://172.16.242.14:1735",
+        "1.5": "tcp://172.16.242.15:1735",
+        "1.6": "tcp://172.16.242.16:1735",
+        "1.7": "tcp://172.16.242.17:1735",
+        "1.8": "tcp://172.16.242.18:1735",
+        "1.9": "tcp://172.16.242.19:1735"
     },
     "http_address": {
         "1.1": "http://172.16.242.11:8081",
+        "1.10": "http://172.16.242.20:8081",
+        "1.11": "http://172.16.242.21:8081",
+        "1.12": "http://172.16.242.22:8081",
+        "1.13": "http://172.16.242.23:8081",
+        "1.14": "http://172.16.242.24:8081",
+        "1.15": "http://172.16.242.25:8081",
+        "1.16": "http://172.16.242.26:8081",
+        "1.17": "http://172.16.242.27:8081",
+        "1.18": "http://172.16.242.28:8081",
+        "1.19": "http://172.16.242.29:8081",
         "1.2": "http://172.16.242.12:8081",
-        "1.3": "http://172.16.242.13:8081"
+        "1.20": "http://172.16.242.30:8081",
+        "1.21": "http://172.16.242.31:8081",
+        "1.22": "http://172.16.242.32:8081",
+        "1.23": "http://172.16.242.33:8081",
+        "1.24": "http://172.16.242.8:8081",
+        "1.25": "http://172.16.242.9:8081",
+        "1.3": "http://172.16.242.13:8081",
+        "1.4": "http://172.16.242.14:8081",
+        "1.5": "http://172.16.242.15:8081",
+        "1.6": "http://172.16.242.16:8081",
+        "1.7": "http://172.16.242.17:8081",
+        "1.8": "http://172.16.242.18:8081",
+        "1.9": "http://172.16.242.19:8081"
     },
     "policy": "majority",
     "threshold": 3,
