--- a/bin/config.json
+++ b/bin/config.json
@@ -1,57 +1,25 @@
 {
     "address": {
-        "1.1": "tcp://121.199.7.211:1735",
-        "1.10": "tcp://121.41.170.108:1735",
-        "1.11": "tcp://47.93.85.233:1735",
-        "1.12": "tcp://101.201.44.240:1735",
-        "1.13": "tcp://123.57.181.166:1735",
-        "1.14": "tcp://101.200.243.76:1735",
-        "1.15": "tcp://59.110.15.55:1735",
-        "1.16": "tcp://39.105.209.194:1735",
-        "1.17": "tcp://101.200.232.174:1735",
-        "1.18": "tcp://47.93.86.15:1735",
-        "1.19": "tcp://59.110.13.77:1735",
-        "1.2": "tcp://121.40.45.209:1735",
-        "1.20": "tcp://121.40.127.205:1735",
-        "1.21": "tcp://120.79.21.213:1735",
-        "1.22": "tcp://120.79.14.172:1735",
-        "1.23": "tcp://47.106.125.20:1735",
-        "1.24": "tcp://47.106.191.32:1735",
-        "1.25": "tcp://47.106.184.73:1735",
-        "1.3": "tcp://121.41.169.242:1735",
-        "1.4": "tcp://121.41.168.48:1735",
-        "1.5": "tcp://121.199.56.65:1735",
-        "1.6": "tcp://121.40.47.5:1735",
-        "1.7": "tcp://121.199.173.217:1735",
-        "1.8": "tcp://121.199.173.124:1735",
-        "1.9": "tcp://121.40.41.198:1735"
+        "1.1": "tcp://{PrivateIpAddress={IpAddress=[172.19.112.229]}, VpcId=vpc-wz9jr5vszdbbk2cxcfspk, VSwitchId=vsw-wz9sp6z5eeybmp2yee2zi, NatIpAddress=}:1735",
+        "1.2": "tcp://{PrivateIpAddress={IpAddress=[172.19.112.228]}, VpcId=vpc-wz9jr5vszdbbk2cxcfspk, VSwitchId=vsw-wz9sp6z5eeybmp2yee2zi, NatIpAddress=}:1735",
+        "1.3": "tcp://{PrivateIpAddress={IpAddress=[172.19.112.227]}, VpcId=vpc-wz9jr5vszdbbk2cxcfspk, VSwitchId=vsw-wz9sp6z5eeybmp2yee2zi, NatIpAddress=}:1735",
+        "1.4": "tcp://{PrivateIpAddress={IpAddress=[172.19.112.224]}, VpcId=vpc-wz9jr5vszdbbk2cxcfspk, VSwitchId=vsw-wz9sp6z5eeybmp2yee2zi, NatIpAddress=}:1735",
+        "1.5": "tcp://{PrivateIpAddress={IpAddress=[172.19.112.221]}, VpcId=vpc-wz9jr5vszdbbk2cxcfspk, VSwitchId=vsw-wz9sp6z5eeybmp2yee2zi, NatIpAddress=}:1735",
+        "1.6": "tcp://{PrivateIpAddress={IpAddress=[172.19.112.225]}, VpcId=vpc-wz9jr5vszdbbk2cxcfspk, VSwitchId=vsw-wz9sp6z5eeybmp2yee2zi, NatIpAddress=}:1735",
+        "1.7": "tcp://{PrivateIpAddress={IpAddress=[172.19.112.222]}, VpcId=vpc-wz9jr5vszdbbk2cxcfspk, VSwitchId=vsw-wz9sp6z5eeybmp2yee2zi, NatIpAddress=}:1735",
+        "1.8": "tcp://{PrivateIpAddress={IpAddress=[172.19.112.223]}, VpcId=vpc-wz9jr5vszdbbk2cxcfspk, VSwitchId=vsw-wz9sp6z5eeybmp2yee2zi, NatIpAddress=}:1735",
+        "1.9": "tcp://{PrivateIpAddress={IpAddress=[172.19.112.220]}, VpcId=vpc-wz9jr5vszdbbk2cxcfspk, VSwitchId=vsw-wz9sp6z5eeybmp2yee2zi, NatIpAddress=}:1735"
     },
     "http_address": {
-        "1.1": "http://121.199.7.211:8081",
-        "1.10": "http://121.41.170.108:8081",
-        "1.11": "http://47.93.85.233:8081",
-        "1.12": "http://101.201.44.240:8081",
-        "1.13": "http://123.57.181.166:8081",
-        "1.14": "http://101.200.243.76:8081",
-        "1.15": "http://59.110.15.55:8081",
-        "1.16": "http://39.105.209.194:8081",
-        "1.17": "http://101.200.232.174:8081",
-        "1.18": "http://47.93.86.15:8081",
-        "1.19": "http://59.110.13.77:8081",
-        "1.2": "http://121.40.45.209:8081",
-        "1.20": "http://121.40.127.205:8081",
-        "1.21": "http://120.79.21.213:8081",
-        "1.22": "http://120.79.14.172:8081",
-        "1.23": "http://47.106.125.20:8081",
-        "1.24": "http://47.106.191.32:8081",
-        "1.25": "http://47.106.184.73:8081",
-        "1.3": "http://121.41.169.242:8081",
-        "1.4": "http://121.41.168.48:8081",
-        "1.5": "http://121.199.56.65:8081",
-        "1.6": "http://121.40.47.5:8081",
-        "1.7": "http://121.199.173.217:8081",
-        "1.8": "http://121.199.173.124:8081",
-        "1.9": "http://121.40.41.198:8081"
+        "1.1": "http://{PrivateIpAddress={IpAddress=[172.19.112.229]}, VpcId=vpc-wz9jr5vszdbbk2cxcfspk, VSwitchId=vsw-wz9sp6z5eeybmp2yee2zi, NatIpAddress=}:8081",
+        "1.2": "http://{PrivateIpAddress={IpAddress=[172.19.112.228]}, VpcId=vpc-wz9jr5vszdbbk2cxcfspk, VSwitchId=vsw-wz9sp6z5eeybmp2yee2zi, NatIpAddress=}:8081",
+        "1.3": "http://{PrivateIpAddress={IpAddress=[172.19.112.227]}, VpcId=vpc-wz9jr5vszdbbk2cxcfspk, VSwitchId=vsw-wz9sp6z5eeybmp2yee2zi, NatIpAddress=}:8081",
+        "1.4": "http://{PrivateIpAddress={IpAddress=[172.19.112.224]}, VpcId=vpc-wz9jr5vszdbbk2cxcfspk, VSwitchId=vsw-wz9sp6z5eeybmp2yee2zi, NatIpAddress=}:8081",
+        "1.5": "http://{PrivateIpAddress={IpAddress=[172.19.112.221]}, VpcId=vpc-wz9jr5vszdbbk2cxcfspk, VSwitchId=vsw-wz9sp6z5eeybmp2yee2zi, NatIpAddress=}:8081",
+        "1.6": "http://{PrivateIpAddress={IpAddress=[172.19.112.225]}, VpcId=vpc-wz9jr5vszdbbk2cxcfspk, VSwitchId=vsw-wz9sp6z5eeybmp2yee2zi, NatIpAddress=}:8081",
+        "1.7": "http://{PrivateIpAddress={IpAddress=[172.19.112.222]}, VpcId=vpc-wz9jr5vszdbbk2cxcfspk, VSwitchId=vsw-wz9sp6z5eeybmp2yee2zi, NatIpAddress=}:8081",
+        "1.8": "http://{PrivateIpAddress={IpAddress=[172.19.112.223]}, VpcId=vpc-wz9jr5vszdbbk2cxcfspk, VSwitchId=vsw-wz9sp6z5eeybmp2yee2zi, NatIpAddress=}:8081",
+        "1.9": "http://{PrivateIpAddress={IpAddress=[172.19.112.220]}, VpcId=vpc-wz9jr5vszdbbk2cxcfspk, VSwitchId=vsw-wz9sp6z5eeybmp2yee2zi, NatIpAddress=}:8081"
     },
     "policy": "majority",
     "threshold": 3,
