--- a/bin/config.json
+++ b/bin/config.json
@@ -1,25 +1,19 @@
 {
     "address": {
-        "1.1": "tcp://172.19.112.229:1735",
-        "1.2": "tcp://172.19.112.228:1735",
-        "1.3": "tcp://172.19.112.227:1735",
-        "1.4": "tcp://172.19.112.224:1735",
-        "1.5": "tcp://172.19.112.221:1735",
-        "1.6": "tcp://172.19.112.225:1735",
-        "1.7": "tcp://172.19.112.222:1735",
-        "1.8": "tcp://172.19.112.223:1735",
-        "1.9": "tcp://172.19.112.220:1735"
+        "1.1": "tcp://127.0.0.1:1735",
+        "1.2": "tcp://127.0.0.1:1736",
+        "1.3": "tcp://127.0.0.1:1737",
+        "1.4": "tcp://127.0.0.1:1738",
+        "1.5": "tcp://127.0.0.1:1739",
+        "1.6": "tcp://127.0.0.1:1740"
     },
     "http_address": {
-        "1.1": "http://172.19.112.229:8081",
-        "1.2": "http://172.19.112.228:8081",
-        "1.3": "http://172.19.112.227:8081",
-        "1.4": "http://172.19.112.224:8081",
-        "1.5": "http://172.19.112.221:8081",
-        "1.6": "http://172.19.112.225:8081",
-        "1.7": "http://172.19.112.222:8081",
-        "1.8": "http://172.19.112.223:8081",
-        "1.9": "http://172.19.112.220:8081"
+        "1.1": "http://127.0.0.1:8080",
+        "1.2": "http://127.0.0.1:8081",
+        "1.3": "http://127.0.0.1:8082",
+        "1.4": "http://127.0.0.1:8083",
+        "1.5": "http://127.0.0.1:8084",
+        "1.6": "http://127.0.0.1:8085"
     },
     "policy": "majority",
     "threshold": 3,
@@ -29,14 +23,14 @@
     "multiversion": false,
     "use_retro_log": false,
     "benchmark": {
-        "T": 60,
+        "T": 2,
         "N": 0,
         "K": 1000,
         "W": 0.5,
-        "Throttle": 0,
+        "Throttle": 3000,
         "Concurrency": 1,
         "Distribution": "conflict",
-        "LinearizabilityCheck": false,
+        "LinearizabilityCheck": true,
         "Conflicts": 0,
         "Min": 0,
         "Mu": 500,
