--- a/bin/config.json
+++ b/bin/config.json
@@ -5,7 +5,10 @@
         "1.3": "tcp://127.0.0.1:1737",
         "1.4": "tcp://127.0.0.1:1738",
         "1.5": "tcp://127.0.0.1:1739",
-        "1.6": "tcp://127.0.0.1:1740"
+        "1.6": "tcp://127.0.0.1:1740",
+        "1.7": "tcp://127.0.0.1:1741",
+        "1.8": "tcp://127.0.0.1:1742",
+        "1.9": "tcp://127.0.0.1:1743"
     },
     "http_address": {
         "1.1": "http://127.0.0.1:8080",
@@ -13,7 +16,10 @@
         "1.3": "http://127.0.0.1:8082",
         "1.4": "http://127.0.0.1:8083",
         "1.5": "http://127.0.0.1:8084",
-        "1.6": "http://127.0.0.1:8085"
+        "1.6": "http://127.0.0.1:8085",
+        "1.7": "http://127.0.0.1:8086",
+        "1.8": "http://127.0.0.1:8087",
+        "1.9": "http://127.0.0.1:8088"
     },
     "policy": "majority",
     "threshold": 3,
